<resources>
    <string name="app_name">Running_App</string>
    <string name="good_luck">Good Luck</string>
    <string name="stop_running">Stop running</string>
    <string name="return_to_menu">Return to menu</string>
    <string name="running_app">Running App</string>
    <string name="running_program">Running program</string>
    <string name="last_10_runs">Last 10 runs</string>
    <string name="start_running">start running</string>
    <string name="title_activity_maps">Map</string>
    <string name="title_activity_maps2">Map</string>
    <string name="login">login</string>
    <string name="weight">weight</string>
    <string name="height">height</string>
    <string name="calculateBMI">calculateBMI</string>
    <string name="very_severely_underweight">very_severely_underweight</string>
    <string name="severely_underweight">severely_underweight</string>
    <string name="underweight">underweight</string>
    <string name="normal" />
    <string name="overweight" />
    <string name="obese_class_i" />
    <string name="obese_class_ii" />
    <string name="obese_class_iii" />
    <string name="bmi_calculator">BMI calculator</string>
    <string name="heightt">Height</string>
    <string name="textviewEditText">TextView</string>
    <string name="title_activity_main2">MainActivity</string>
    <!-- Strings used for fragments for navigation -->
    <string name="first_fragment_label">First Fragment</string>
    <string name="second_fragment_label">Second Fragment</string>
    <string name="next">Next</string>
    <string name="previous">Previous</string>

    <string name="hello_first_fragment">Hello first fragment</string>
    <string name="hello_second_fragment">Hello second fragment. Arg: %1$s</string>
    <string name="title_activity_first_level">FirstLevelActivity</string>
    <string name="title_activity_second_level">SecondLevelActivity</string>
</resources>