<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="#EEEDF1"
    tools:context=".startRunningActivity">

    <Button
        android:id="@+id/botton_stopRunning"
        android:layout_width="wrap_content"
        android:layout_height="150dp"
        android:layout_marginTop="100dp"
        android:text="@string/stop_running"
        app:backgroundTint="#1BDF23"
        app:cornerRadius="10000dp"
        app:layout_constraintBottom_toTopOf="@+id/button2_Return"
        app:layout_constraintEnd_toEndOf="@+id/textView_GoodLuck"
        app:layout_constraintStart_toStartOf="@+id/textView_GoodLuck"
        app:layout_constraintTop_toBottomOf="@+id/textView_GoodLuck"
        app:layout_constraintVertical_bias="0.0" />

    <TextView
        android:id="@+id/textView_GoodLuck"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:fontFamily="sans-serif-black"
        android:text="@string/good_luck"
        android:textColor="#A69E9E"
        android:textSize="40sp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.084" />

    <Button
        android:id="@+id/button2_Return"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="22dp"
        android:layout_marginBottom="350dp"
        android:text="@string/return_to_menu"
        app:backgroundTint="#3F51B5"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="@+id/botton_stopRunning"
        app:layout_constraintHorizontal_bias="0.315"
        app:layout_constraintStart_toStartOf="@+id/botton_stopRunning"
        app:layout_constraintTop_toBottomOf="@+id/botton_stopRunning" />

    <TextView
        android:id="@+id/tv_showTime"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text=""
        android:textSize="36sp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/button2_Return" />
</androidx.constraintlayout.widget.ConstraintLayout>